# clickup-mcp

./: .gitignore  CLAUDE.md  Justfile  README.md  pyproject.toml
src/clickup_mcp/: __init__.py  cli.py  client.py  server.py
tst/: __init__.py  conftest.py  helpers.py  test_client.py  test_server.py
